Add ProblemTemplate and ProblemTemplateContext

--- a/PoliginBase/PoliginBase/PoliginBase.csproj
+++ b/PoliginBase/PoliginBase/PoliginBase.csproj
@@ -188,6 +188,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\PoliginBaseContext.cs" />
+    <Compile Include="Models\ProblemTemplate.cs" />
+    <Compile Include="Models\ProblemTemplateContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -302,6 +305,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
+    <Content Include="Views\CreateProblem\NewProblem.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
