--- a/PoliginBase/PoliginBase/Web.config
+++ b/PoliginBase/PoliginBase/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,7 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-PoliginBase-20140414104003;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-PoliginBase-20140414104003.mdf" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-PoliginBase-20140414104003;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-PoliginBase-20140414104003.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="PoliginBaseContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=PoliginBaseContext-20140414135007; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|PoliginBaseContext-20140414135007.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
